--- a/baresip/Makefile
+++ b/baresip/Makefile
@@ -164,7 +164,7 @@ $(eval $(call BuildPlugin,evdev,input event device UI,evdev,))
 $(eval $(call BuildPlugin,g711,G.711 audio codec,g711,))
 $(eval $(call BuildPlugin,g722,G.722 audio codec,g722,+PACKAGE_baresip-mod-g722:libspandsp))
 $(eval $(call BuildPlugin,gst, gstreamer framework,gst, +gst-mod-alsa  +gst-mod-audioconvert +gst-mod-audioresample))
-$(eval $(call BuildPlugin,h264packet, H.264 stream packetize,h264packet, +gst-mod-alsa  +gst-mod-audioconvert +gst-mod-audioresample))
+$(eval $(call BuildPlugin,h264packet, H.264 stream packetize,h264packet, ))
 $(eval $(call BuildPlugin,sdl,SDL video display,sdl,+libsdl))
 $(eval $(call BuildPlugin,oss,OSS audio driver,oss,))
 $(eval $(call BuildPlugin,opus,OPUS codec, opus, +PACKAGE_baresip-mod-opus:opus))
